--- a/app/views/author/posts/index.html.erb
+++ b/app/views/author/posts/index.html.erb
@@ -1,6 +1,15 @@
 <% provide(:page_title, "All Posts") %>
-<% provide(:blog_active, 'active') %>
+<% provide(:author, 'active') %>
 
 <div class="row">
-  <%= render @posts %>
+  <div>
+    <%= link_to 'New post', new_author_post_path, class: 'btn btn-primary btn-lg' %>
+  </div>
+  <br>
+  <table class="table table-striped">
+    <tr>
+      <th colspan="4">Title</th>
+    </tr>
+    <%= render @posts %>
+</table>
 </div>
