--- a/app/views/author/posts/show.html.erb
+++ b/app/views/author/posts/show.html.erb
@@ -1,5 +1,10 @@
 <% provide(:page_title, @post.title) %>
-<% provide(:blog_active, 'active') %>
+<% provide(:author, 'active') %>
+
+<div>
+  <%= link_to 'Edit', edit_author_post_path(@post), class: 'btn btn-sm btn-warning' %>
+  <%= link_to 'Remove', author_post_path(@post), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' %>
+</div>
 
 <div class="row">
   <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2 text-xs-center">
