--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,6 +12,9 @@
         <li class="list-group-item">
           <%= link_to 'Contact', contact_path, class: "nav-link #{yield(:contact_active)}" %>
         </li>
+        <li class="list-group-item">
+          <%= link_to 'My Posts', author_posts_path, class: "nav-link #{yield(:author)}" %>
+        </li>
       </ul>
     </div>
   </div>
@@ -34,6 +37,9 @@
       </li>
       <li class="nav-item">
         <%= link_to 'Contact', contact_path, class: "nav-link #{yield(:contact_active)}" %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'My Posts', author_posts_path, class: "nav-link #{yield(:author)}" %>
       </li>
     </ul>
   </div>
