--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,9 +12,14 @@
         <li class="list-group-item">
           <%= link_to 'Contact', contact_path, class: "nav-link #{yield(:contact_active)}" %>
         </li>
-        <li class="list-group-item">
-          <%= link_to 'My Posts', author_posts_path, class: "nav-link #{yield(:author)}" %>
-        </li>
+        <% if author_signed_in? %>
+          <li class="list-group-item">
+            <%= link_to 'My Posts', authors_posts_path, class: "nav-link #{yield(:author)}" %>
+          </li>
+          <li class="list-group-item">
+            <%= link_to 'Log out', destroy_author_session_path, method: :delete, class: "nav-link #{yield(:author)}" %>
+          </li>
+        <% end %>
       </ul>
     </div>
   </div>
@@ -38,9 +43,14 @@
       <li class="nav-item">
         <%= link_to 'Contact', contact_path, class: "nav-link #{yield(:contact_active)}" %>
       </li>
-      <li class="nav-item">
-        <%= link_to 'My Posts', author_posts_path, class: "nav-link #{yield(:author)}" %>
-      </li>
+      <% if author_signed_in? %>
+        <li class="nav-item">
+          <%= link_to 'My Posts', authors_posts_path, class: "nav-link #{yield(:author)}" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Log out', destroy_author_session_path, method: :delete, class: "nav-link #{yield(:author)}" %>
+        </li>
+      <% end %>
     </ul>
   </div>
 </nav>
